
link:https://docs.netapp.com/us-en/workload-fsx-ontap/increase-file-system-capacity.html["Ajuster la capacité du système de fichiers"]



== 03 août 2025



=== Améliorations apportées à l'onglet Relations de réplication

Nous avons ajouté plusieurs nouvelles colonnes au tableau des relations de réplication pour vous donner plus d'informations sur vos relations de réplication dans l'onglet *Relations de réplication*.  Le tableau comprend désormais les colonnes suivantes :

* Politique SnapMirror
* Système de fichiers source
* Système de fichiers cible
* État de la relation
* Heure du dernier transfert




=== Améliorations de la protection autonome contre les ransomwares de NetApp avec IA (ARP/AI)

Cette version introduit le terme mis à jour « NetApp Autonomous Ransomware Protection with AI (ARP/AI) » pour mieux refléter l'intégration de l'intelligence artificielle dans nos capacités de protection contre les ransomwares.

De plus, les améliorations suivantes ont été apportées à ARP/AI :

* ARP/AI au niveau du volume : vous pouvez désormais activer ARP/AI au niveau du volume, ce qui vous permet de protéger des volumes spécifiques au sein de vos systèmes de fichiers FSx for ONTAP .
* Création automatique de snapshots : vous pouvez définir la stratégie ARP/AI pour prendre des snapshots automatiques et définir la fréquence à laquelle les snapshots sont pris pour les volumes avec ARP/AI activé, améliorant ainsi votre stratégie de protection des données.
* Instantanés immuables : ARP/AI prend désormais en charge les instantanés immuables, qui ne peuvent pas être supprimés ou modifiés, offrant ainsi une couche de sécurité supplémentaire contre les attaques de ransomware.