@@ -2163,7 +2163,6 @@
   <block id="0b9457a2973ff10b39045b865037dcb8" category="list-text">Depuis *FSx for ONTAP*, sélectionnez le menu d'actions du système de fichiers contenant les volumes à rééquilibrer, puis sélectionnez *Gérer*.</block>
   <block id="bf1c457139c3a04a33b336ab43865dad" category="admonition">Un administrateur Workload Factory peut<block ref="6089e6bc679073f1388a01bc136ad00e" category="inline-xref-macro-rx"></block> pendant l'opération.</block>
   <block id="59dfa377d2b15b40ba2bddd83dcb5c53" category="list-text">Depuis *FSx for ONTAP*, sélectionnez le menu d'actions du système de fichiers qui contient le volume à rééquilibrer, puis sélectionnez *Gérer*.</block>
-  <block id="2465211fab7d73457701958a158bbf39" category="list-text">Dans *Stockage*, sélectionnez *Accéder au stockage</block>
   <block id="fbf1bac8c72be0440c190a08fabc8dc0" category="paragraph">La réplication d'une machine virtuelle de stockage vers un autre système de fichiers FSx for ONTAP dans NetApp Workload Factory fournit une couche de protection d'accès aux données en cas de perte de données.  Cette opération réplique tous les volumes d'une machine virtuelle de stockage vers un autre système de fichiers FSx pour ONTAP .</block>
   <block id="e42fc3e4b35126c00393bef5dd43abb0" category="list-text">Depuis *FSx for ONTAP*, sélectionnez le menu d'actions du système de fichiers avec la machine virtuelle de stockage à répliquer, puis sélectionnez *Gérer*.</block>
   <block id="f762650128ec007cd0d70b6659361ba3" category="list-text">Dans l’onglet Machines virtuelles de stockage, sélectionnez le menu d’actions de la machine virtuelle de stockage pour laquelle répliquer une SVM.</block>
@@ -2238,4 +2237,9 @@
   <block id="3c031b939f6ec312ee601d021e7a6644" category="sidebar">Console NetApp</block>
   <block id="cc58d3a9b2264c4fd8cb1d3f61b90bdc" category="sidebar">Services de données NetApp</block>
   <block id="aea7c72083066ee89008056089d95877" category="sidebar">Découvrir et afficher les volumes de cache</block>
+  <block id="ea7d4002457b002b29ca2cb9a498c0bc" category="section-title">Nouvelle notification pour le stockage</block>
+  <block id="ba72fdb3bdfd568a9dee9e12c3566da1" category="paragraph">Le service de notification de l'usine de charge de travail inclut des notifications de réussite et d'échec pour la gestion automatique de la capacité de stockage.</block>
+  <block id="28a2c493e9a663d617e582302e1bcf28" category="inline-link-macro">Notifications pour BlueXP workload factory</block>
+  <block id="165f0ade723f657a5d7981bfecbfc75a" category="paragraph"><block ref="165f0ade723f657a5d7981bfecbfc75a" category="inline-link-macro-rx"></block></block>
+  <block id="419085fd5f19a39001679a5f52b0acdf" category="list-text">Dans *Stockage*, sélectionnez *Accéder au stockage*</block>
 </blocks>
